<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#66BB6A">
        <TextView
            android:id="@+id/minute_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:gravity="center_horizontal"
            android:textSize="48sp"
            android:textColor="#E8F5E9"
            android:fontFamily="sans-serif-medium"
            android:text="@string/minute_default"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="16dp"
            android:textColor="#E8F5E9"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/minute_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/duo"
            android:onClick="remind"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#33691E"
            android:text="Học bài \nhôm nay chưa?"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:textSize="16sp"
            android:text="@string/xp_gained"/>
        <EditText
            android:id="@+id/XP_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:inputType="number"/>
        <Button
            android:id="@+id/button_add_XP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XP_button_label"
            android:onClick="addXP"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:textSize="16sp"
            android:text="@string/time_played"/>
        <EditText
            android:id="@+id/time_played_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:inputType="number"/>
        <Button
            android:id="@+id/button_add_time_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/played_button_label"
            android:onClick="subtractMinute"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="8dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="Minutes Converter"
        android:textSize="20sp"
        android:textColor="#616161"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_text_hour"
            android:minWidth="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:inputType="number"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="h"
            android:textSize="32sp"/>
        <EditText
            android:id="@+id/edit_text_minute"
            android:minWidth="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:inputType="number"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:textSize="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/edit_text_minute_result"
            android:minWidth="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:inputType="number"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"

        android:background="#66BB6A" />
</LinearLayout>
